BMSSimplificationEclipseWS/EUFULL-Org-Backup/src/objects/Call2_vod__c.object
<CustomObject>
    <description>This object stores the main interaction header information. There is one interaction row for every account or contact on the interaction. A group interaction with 3 doctors will produce 4 interaction rows.</description>
    <fields>
        <fullName>ASSMCA_vod__c</fullName>
        <description>The ASSMCA # is a license number when sampling controlled substances for a Puerto Rican-based Physician.</description>
        <label>ASSMCA</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Access_Discussed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field capture the fact that an access related discussion took place during the interaction</description>
        <label>Access Discussed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Accompanied_By_BMS_EMEA__c</fullName>
        <label>Accompanied By:</label>
        <picklist>
            <picklistValues>
                <fullName>Access</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Unit Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clinical Research Personnel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Country Medical Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>External Partnership Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Field coach</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Field Medical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Field Medical Mgr / Trainer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health Economics Outcomes research</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Joint venture partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JV Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Market Access</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Market Access Colleague</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Market Access Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MSM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not accompanied</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Not accompanied : refused by HCP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Office-Based Medic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Field Medical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other HO Colleague</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pricing &amp; Reimbursement Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RBD </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RBM </fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Account_Plan_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to account plan associated with this call. This field is optional.</description>
        <label>Plan</label>
        <referenceTo>Account_Plan_vod__c</referenceTo>
        <relationshipLabel>Interactions</relationshipLabel>
        <relationshipName>Call2_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Source_Country_BMS_CORE__c</fullName>
        <formula>TEXT(Account_vod__r.Account_Source_Country_BMS_CORE__c)</formula>
        <label>Account Source Country.</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the account that the interaction is associated with.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Interactions</relationshipLabel>
        <relationshipName>Call2_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Achieved_BMS_CN__c</fullName>
        <description>Call Target Achieved marker for BMS China MA team</description>
        <label>Achieved</label>
        <picklist>
            <picklistValues>
                <fullName>Achieved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Follow up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unachieved</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Activity_ID_BMS__c</fullName>
        <externalId>true</externalId>
        <label>Activity ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Activity_Type__c</fullName>
        <description>Activity type sample field (e.g. General Meeting, Contracts Discussion or Tactical Discussion...) for this call.</description>
        <label>Activity Type</label>
        <picklist>
            <picklistValues>
                <fullName>Accredited CHE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AdBoard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consultation Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contracts Discussion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disease Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hospital/Clinic Visit with Rep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Key Informant Interview</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Office Visit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OLA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tactical Discussion</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Add_Detail_vod__c</fullName>
        <description>Field used to assist in the creation of Call2 Detail records to a Call2 record. The 18-digit Product Ids are ordered from left to right and are comma-delimited. The field will be blanked out after each save.  A trigger on Call2 Header will parse the delimited list and create Call2 Detail records for the Call2 record with priorities set from left to right.  This field is intended to assist in the creation of the child Call2 Detail records, but is not required for loading data.
E.g., A00T0000000HFNHYET,A00T0000000HFNOYER</description>
        <label>Add Detail</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Add_Key_Message_vod__c</fullName>
        <description>Field used to assist in the creation of Call2 Key Message records for a Call2 record. Input format is a list delimited by &quot;;;;&quot; of the following five fields (the last two, though, are optional) that are separated by &quot;@@&quot; - &lt;Key_Message_ID&gt;@@&lt;Product_ID&gt;@@&lt;Reaction&gt;@@&lt;Category&gt;@@&lt;Vehicle&gt;. An example would be &quot;Key Message Id 1@@Product ID 1@@Reaction 1;;;Key Message Id 2@@Product ID 1@@Reaction 2@@Category 2@@Vehicle 2&quot;. A trigger on Call2 Header will parse the delimited lists and create Call2 Key Message records for the Call2 record.  This field is intended to assist in the creation of the child Call2 Key Message records, but is not required for loading data.</description>
        <label>Add Key Message</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Address_Line_1_vod__c</fullName>
        <description>Address Line 1 of the Call Address. This field should not be displayed on the Page Layout.</description>
        <label>Address Line 1</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Line_2_vod__c</fullName>
        <description>Address Line 2 of the Call Address.  This field should not be displayed on the Page Layout.</description>
        <label>Address Line 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_vod__c</fullName>
        <description>A field used to denormalize the address information associated with a call. This aids in data loading and displaying information on related lists.</description>
        <label>Address</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Adherence_Councilor_BMS_US__c</fullName>
        <label>Adherence Counselor</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Adjusted_Attendees_BMS__c</fullName>
        <formula>IF( Attendees_vod__c=0,1,Attendees_vod__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Adjusted Attendees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Agenda_BMS_US__c</fullName>
        <description>VPRO - December 2012 - BMS Global Requirements &amp; Design: Comments section for BMS MM users to record objectives/agenda of a call</description>
        <label>Agenda</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Allowed_Products_vod__c</fullName>
        <description>When populated, only listed products will be detail-able when a rep views this call.  The format is a double semi-colon delimited list of Product Names. These will be textual Product Catalog records of type = Detail. For example,  Cholecap;;Labrinone.</description>
        <inlineHelpText>When populated, only listed products will be detail-able when a rep views this call.  The format is a double semi-colon delimited list of Product Names. These will be textual Product Catalog records of type = Detail. For example,  Cholecap;;Labrinone.</inlineHelpText>
        <label>Allowed Products</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Assign_To_BMS_EMEA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>BMS ACN - December 2015 (Q4 GRM) : New Field on Interaction (used by Booking Agent) to assign calls to end users.</description>
        <label>Assign To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Interactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assigner_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to User Id that assigned the call to its owner</description>
        <inlineHelpText>Lookup to User Id that assigned the call to its owner</inlineHelpText>
        <label>Assigner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Assigner_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assignment_Datetime_vod__c</fullName>
        <description>Date and time of when the call was assigned to a user</description>
        <inlineHelpText>Date and time of when the call was assigned to a user</inlineHelpText>
        <label>Assignment Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Attendee_Post_Status_vod__c</fullName>
        <description>Holds a Success or Fail status based on the attempt to post this status into Concur.  If the expense was not yet posted, status = null. The attendee post status will only be stored for account records that have their own child call, not other attendees.</description>
        <label>Attendee Post Status</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attendee_Type_vod__c</fullName>
        <description>The type of entity who the call is created for. This field is used in reporting. For performance reasons, this is not set by an APEX  trigger. For data import, this field should be set correctly otherwise reports that depend on this field may not run correctly.</description>
        <label>Attendee Type</label>
        <picklist>
            <picklistValues>
                <fullName>Group_Account_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Person_Account_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>User_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event_vod</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Attendee_list_vod__c</fullName>
        <description>This text field is a semi colon delimited list of Non-HCP attendees who were on this call. This text field can be displayed in Concur so that the User can then match to other Non-HCPs later.</description>
        <label>Other Non-HCP Attendees</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Attendees_vod__c</fullName>
        <description>The total number of attendees for this call. For a group call with four doctors, this would be &quot;3&quot; for the parent call associated to the parent account and &quot;0&quot; for the child calls.  For performance reasons, this is not set via a trigger.</description>
        <label>Attendees</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMS_Code_ID__c</fullName>
        <label>BMS_Code_ID</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMS_EMEA_Account_Source_Country__c</fullName>
        <description>VPRO August 2014: Custom field to populate the Country based om the country of the HCP. Workflow will populate the value</description>
        <label>Account Source Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMS_Employee_ID__c</fullName>
        <formula>Owner:User.BMS_Employee_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BMS Employee ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMS_KMB__c</fullName>
        <defaultValue>false</defaultValue>
        <label>KMB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMS_SFA__c</fullName>
        <label>BMS_SFA</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BPA_ID_BMS__c</fullName>
        <formula>Parent_Address_vod__r.External_ID_vod__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BPA ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BP_ID_BMS__c</fullName>
        <formula>Account_vod__r.BP_ID_BMS_CORE__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BP ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BU_BMS_CN__c</fullName>
        <description>Business Unit</description>
        <label>BU</label>
        <picklist>
            <controllingField>Call_Target_BMS_CN__c</controllingField>
            <picklistValues>
                <fullName>CV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ONCO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OTC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Booking_Agent_Notes_BMS_EMEA__c</fullName>
        <description>BMS ACN - December 2015 (Q4 GRM) : New Field on Interaction (used by Booking Agent) to enter notes.</description>
        <label>Booking Agent Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Business_Unit_BMS__c</fullName>
        <formula>CreatedById</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Unit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CDS_Expiration_Date_vod__c</fullName>
        <description>The expiration date of the CDS registration number for the call.</description>
        <label>CDS Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CDS_vod__c</fullName>
        <description>The CDS registration number for the corresponding state of the call address.</description>
        <label>CDS #</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLM_Location_Latitude_vod__c</fullName>
        <description>Stores the latitude coordinate of the location where the key message is shown</description>
        <inlineHelpText>Stores the latitude coordinate of the location where the key message is shown</inlineHelpText>
        <label>CLM Location Latitude</label>
        <precision>15</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CLM_Location_Longitude_vod__c</fullName>
        <description>Stores the longitude coordinate of the location where the key message is shown</description>
        <inlineHelpText>Stores the longitude coordinate of the location where the key message is shown</inlineHelpText>
        <label>CLM Location Longitude</label>
        <precision>15</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CLM_Location_Services_Status_vod__c</fullName>
        <description>Indicates the state of location services at the time the key messages is shown.
Enabled_vod - location services are turned on and the system is able to get the user&apos;s location
Disabled_vod - location services are turned off
No_connection_vod - no network connection</description>
        <label>CLM Location Services Status</label>
        <picklist>
            <picklistValues>
                <fullName>Enabled_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disabled_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No_connection_vod</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CLM_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked indicates CLM has been run for this call and the call contents were populated from CLM.</description>
        <label>CLM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Call_Activity_Description_BMS_US__c</fullName>
        <description>VPRO - February 2013 - BMS Global Requirements &amp; Design: Call Activity Description for BMS MM users when recording a call</description>
        <label>Call Activity Description</label>
        <picklist>
            <picklistValues>
                <fullName>Product Update</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clinical Discussion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Discussion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contracting Discussion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pull Through Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Committee Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Branded Discussion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conference</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Provider</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PEER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LNL Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AHCP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CIM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Call_Activity_Description_Comment_BMS_US__c</fullName>
        <description>VPRO - March 2013 - BMS Global Requirements &amp; Design: Call Activity Description free text field for BMS MM users when recording a call</description>
        <label>Call Activity Description Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Call_Activity_Description_KAM_BMS_US__c</fullName>
        <label>Call Activity Description</label>
        <picklist>
            <picklistValues>
                <fullName>Product Update</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clinical Discussion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Discussion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contracting Discussion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pull Through Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Committee Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Branded Discussion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conference</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Provider</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community Event</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Call_Comments_vod__c</fullName>
        <description>Free text comments for call.</description>
        <label>Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Call_Date_vod__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <description>The date of the call when it was first saved or submitted. This field is set via a trigger to the current date if neither the date or datetime field is supplied.</description>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Call_Datetime_vod__c</fullName>
        <description>The time when the rep specified for the call unless the call was signed, in which case this is the signature time.  This field is optional for users who which to plan their calls down to a specific hour or minute.  If a datetime is specified, a corresponding salesforce.com event is created via a trigger for calendar integration.</description>
        <label>Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Call_Duration_of_Days_BMS_CN__c</fullName>
        <description>convert Call durations BSM cn to # days.
For calculate sum of call durations for medaical report purpose.</description>
        <formula>CASE( Duration_BMS_CN__c ,
&apos;15 mins&apos;, 0.03125, 
&apos;30 mins&apos;, 0.0625,
&apos;45 mins&apos;, 0.09375,
&apos;1 hr&apos;, 0.125,
&apos;2 hrs&apos;, 0.25,
&apos;4 hrs&apos;, 0.5,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Call Duration # of Days</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Call_Notes_BMS__c</fullName>
        <label>Call Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Call_Target_BMS_CN__c</fullName>
        <description>Call Target for BMS China Market Access users</description>
        <label>Call Target</label>
        <picklist>
            <picklistValues>
                <fullName>Product-related</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Policy-relevant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Companies associated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social visit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Society-related</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Call_Target_Detail_BMS_CN__c</fullName>
        <description>Call Target Detail info for BMS China Market Access users</description>
        <label>Call Target Detail</label>
        <picklist>
            <controllingField>Call_Target_BMS_CN__c</controllingField>
            <picklistValues>
                <fullName>Pharmacy administration committee info</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>healthcare control info</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Healthcare reform</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HR info of hospital</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project communication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Company Introduction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Senior management visit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product In</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Product</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Call_Type_BMS_CN__c</fullName>
        <label>Call Type</label>
        <picklist>
            <picklistValues>
                <fullName>Full Call</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Group Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reminder Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telephone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Call_Type_vod__c</fullName>
        <description>Type of call which is system maintained based on the type and contents of the call. This field is used for reporting purposes. Valid values are:  Detail Only, Detail with Sample, Group Detail, Group Detail with Sample, Sample Only. These values should not be changed, but the translations for these picklists may be changed.  Attendees have the same call type as the header call. For a Group call with 3 professionals, all 4 records have the call type of &quot;Group Detail&quot;</description>
        <label>Interaction Type</label>
        <picklist>
            <picklistValues>
                <fullName>Detail Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Detail with Sample</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Group Detail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Group Detail with Sample</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sample Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event Detail</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Check_In_Latitude_vod__c</fullName>
        <description>Captures latitude on check in</description>
        <label>Check In Latitude</label>
        <precision>15</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Check_In_Location_Services_Status_vod__c</fullName>
        <description>Captures device Location Services status.
Enabled_vod – location services are turned on and the system is able to get the user&apos;s location.
Disabled_vod – location services are turned off.
No_Connection_vod – no network connection.</description>
        <label>Check In Location Services Status</label>
        <picklist>
            <picklistValues>
                <fullName>Enabled_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disabled_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No_connection_vod</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Check_In_Longitude_vod__c</fullName>
        <description>Captures longitude on check in</description>
        <label>Check In Longitude</label>
        <precision>15</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Check_In_Status_vod__c</fullName>
        <description>Captures check in status.
Checked_In_vod - GPS coordinates were captured.
Not_Checked_In_vod - GPS coordinates could not be captured.</description>
        <label>Check In Status</label>
        <picklist>
            <picklistValues>
                <fullName>Checked_In_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not_Checked_In_vod</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Check_In_Timestamp_vod__c</fullName>
        <description>Captures check in date and time</description>
        <label>Check In Timestamp</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Child_Account_Id_vod__c</fullName>
        <description>The textual ID of the Child Account value maintained in the Child_Account_vod field.</description>
        <label>Child Account Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
</CustomObject>